fixed z-index to 11 9s, ie. 99999999999 to get it above Magic Actions for Youtube's backlighting effect in HD cinema mode

--- a/chrome/spdr-styles.css
+++ b/chrome/spdr-styles.css
@@ -15,7 +15,7 @@
 	height:510px;
 	position:absolute;
     background-color: rgba( 200, 200, 200, 0.5);
-    z-index:1999999999;
+    z-index:99999999999;
     border:1px solid #d22e2e;
     border-radius:4px;
     padding:4px 4px 4px 1px;
